--- a/assets/style/layout.css
+++ b/assets/style/layout.css
@@ -43,6 +43,12 @@ main {
   background: #ffffff;
   margin-top: var(--space-md);
   border-radius: var(--radius-base) var(--radius-base) 0 0;
-  padding: var(--space-lg) var(--content-padding-inline)
-    calc(var(--space-lg) * 2);
+  padding: var(--space-lg) var(--space-xs) calc(var(--space-lg) * 2);
+}
+
+@media (min-width: 1400px) {
+  .canvas-wrapper {
+    padding: var(--space-lg) var(--content-padding-inline)
+      calc(var(--space-lg) * 2);
+  }
 }
