--- a/assets/style/custom-theme.css
+++ b/assets/style/custom-theme.css
@@ -1,3 +1,3 @@
- @import "themes/stater.css";
+/* @import "themes/stater.css"; */
 /* @import "themes/sbn.css"; */
-/* @import "themes/randstad.css"; */
+@import "themes/randstad.css";
