--- a/src/theme.css
+++ b/src/theme.css
@@ -63,8 +63,10 @@
   --status-pending: var(--color-warning-secondary);
   --status-pending-100: var(--color-warning-secondary-100);
 
-  /* Main */
-  --main-surface: var(--color-white);
+  /* Surface colors */
+  --surface-main: var(--color-white);
+  --surface-current: var(--color-white);
+  --main-surface: var(--surface-main); /* Deprecated variable */
 
   /* Typography */
   --font-family-base: -apple-system, "BlinkMacSystemFont", "Segoe UI",
