--- a/src/theme.css
+++ b/src/theme.css
@@ -1,8 +1,8 @@
 :root {
   /* Default theme values */
-  --rgb-brand: 0 0 0;
+  --rgb-brand: 0 100 255;
   --rgb-brand-secondary: var(--rgb-brand);
-  --rgb-text: var(--rgb-brand);
+  --rgb-text: 50 50 50;
   --rgb-heading: var(--rgb-brand-secondary);
 
   --color-brand-base: rgb(var(--rgb-brand));
