--- a/specs/specflow.css
+++ b/specs/specflow.css
@@ -1,5 +1,5 @@
 :root {
   --rgb-brand: 55 143 197;
-  --rgb-brand-secondary: 172 127 228;
-  --text-color-heading: rgb(var(--rgb-brand));
+  /* --rgb-brand-secondary: 172 127 228;
+  --text-color-heading: rgb(var(--rgb-brand)); */
 }
