--- a/src/theme.css
+++ b/src/theme.css
@@ -100,8 +100,8 @@
   --button-background-active: var(--color-brand-a40);
 
   /* Shadow */
-  --drop-shadow-base: 0 0.125rem 1.25rem rgba(0 0 0 5%);
-  --drop-shadow-level2: 0 0.25rem 1rem rgba(0 0 0 10%);
+  --drop-shadow-base: 0 0.125rem 1.25rem rgba(0 0 0 / 5%);
+  --drop-shadow-level2: 0 0.25rem 1rem rgba(0 0 0 / 10%);
 
   /* Sizing */
   --space-xl: 4.5rem;
